Missing particles update #59174

Closed
opened 2018-12-11 10:31:10 +01:00 by William Reynish · 3 comments

System Information
Operating system: macOS 10.14.1 (18B75)
Graphics card: Intel Iris Plus Graphics 640 1536 MB

Blender Version
Broken: (2.80, 24153946ad1, blender2.8, 2018-12-11, as found on the splash screen)
Worked: (2.80 1 week ago)

Short description of error
Changing any particle setting does not update the result in the viewport

Exact steps for others to reproduce the error

  • Open Blender 2.8 with default settings
  • With the default cube, go to Particles and add hair particles
  • Change 'Number' property to anything - 0 for example
  • The viewport doesn't update - the viewport still has 1000 particles visible

The same applies to any other particles property.

**System Information** Operating system: macOS 10.14.1 (18B75) Graphics card: Intel Iris Plus Graphics 640 1536 MB **Blender Version** Broken: (2.80, 24153946ad1, blender2.8, 2018-12-11, as found on the splash screen) Worked: (2.80 1 week ago) **Short description of error** Changing any particle setting does not update the result in the viewport **Exact steps for others to reproduce the error** - Open Blender 2.8 with default settings - With the default cube, go to Particles and add hair particles - Change 'Number' property to anything - 0 for example - The viewport doesn't update - the viewport still has 1000 particles visible The same applies to any other particles property.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Sergey Sharybin was assigned by William Reynish 2018-12-11 10:32:13 +01:00

This issue was referenced by 49b5d45118

This issue was referenced by 49b5d45118b76f7ab0383b30a98192ef6410547b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59174
No description provided.