Fix T59174: Missing particles update